--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.bg-img {
+  background-image: url("https://res.cloudinary.com/dfmpvse6t/image/upload/v1717149989/k6p8ur7enenmyreen5ot.png");
+  background-position-y: top;
+  background-position-x: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
